<resources>
    <string name="app_name">FindYou</string>

    <string name="btn_confirm">确定</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_delete">删除</string>
    <string name="btn_send">发送</string>
    <string name="btn_search">搜索</string>

    <string name="username">用户名</string>
    <string name="userpwd">密码</string>
    <string name="userpwd_again">确认密码</string>

    <string name="forgetpwd">忘记密码</string>
    <string name="login">登 录</string>
    <string name="error_empty_login">请输入用户名或密码</string>

    <!--注册-->
    <string name="register">注 册</string>
    <string name="phone">手机号</string>
    <string name="email">邮箱</string>

    <string name="title_find">添加</string>

    <!--toast-->
    <string name="toast_input_empty">请将信息输入完整</string>
    <string name="toast_phone_error">手机号格式不正确，请重新输入</string>
    <string name="toast_email_error">邮箱格式不正确，请重新输入</string>
    <string name="toast_pwd_notequal">两次输入密码不同</string>
    <string name="toast_exist_user">该手机号已注册，请重新填写</string>
    <string name="toast_friendname_empty">请输入要查找的手机号或邮箱</string>
    <string name="toast_sms_max">每个手机号每天最多发送三次短信</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
