<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/dp_10"
    android:paddingRight="@dimen/dp_10"
    tools:context="com.dexing.findyou.mine.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_10"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"
            android:src="@mipmap/login_name" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_15">

            <EditText
                android:id="@+id/edtPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:inputType="phone"
                android:text="13552784020"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/transparent_gray"
                android:textSize="@dimen/sp_16" />

            <ImageView
                android:id="@+id/imgDelPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:padding="10dp"
                android:src="@mipmap/login_del" />
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_5"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"
            android:src="@mipmap/login_name" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_15">

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textVisiblePassword|textPersonName"
                android:text="171024402@qq.com"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/transparent_gray"
                android:textSize="@dimen/sp_16" />

            <ImageView
                android:id="@+id/imgDelEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:padding="10dp"
                android:src="@mipmap/login_del" />
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_5"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"
            android:src="@mipmap/login_pwd" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_15">

            <EditText
                android:id="@+id/edtPwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/userpwd"
                android:text="123456"
                android:inputType="textPassword"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/transparent_gray"
                android:textSize="@dimen/sp_16" />

        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_5"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"
            android:src="@mipmap/login_pwd" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_15">

            <EditText
                android:id="@+id/edtPwdAgain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/userpwd_again"
                android:text="123456"
                android:inputType="textPassword"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/transparent_gray"
                android:textSize="@dimen/sp_16" />

        </FrameLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_margin="@dimen/dp_10"
        android:clickable="true"
        android:background="@drawable/btn_bg"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:clickable="true"
            android:textColor="@color/colorAccent"
            android:text="@string/register"
            android:textSize="@dimen/sp_16" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/dp_10"
            android:visibility="invisible" />

    </RelativeLayout>

</LinearLayout>
